git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@172 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -1,11 +1,12 @@
 .nav
   #help-close.help-link=link_to_remote(content_tag(:div , "&nbsp;"),:url=>{:controller=>:help , :action=>:close},:complete => "closeHelp();")
   %div=retrieve(@id,'start-help')
-  - unless @previous.nil?
-    #help-previous=link_to_remote(content_tag(:div ,"precedent"),:url=>{:controller=>:help , :action=>:search, :id=>@previous } )
+  %br
+  #help-previous.help-t=link_to_remote("precedent",:url=>{:controller=>:help , :action=>:previous }, :update=>:help ) if session[:help_history].size>1
 
 
   <!--#help-previous=link_to_remote(content_tag(:div , "precedent"),:url=>{:controller=>:help , :action=>:search, :id=>@previous}, :update=>"search")-->
   <!--%p=@previous.to_s-->
  
   
+     
