git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@180 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/accounts.html.haml
+++ b/app/views/accountancy/accounts.html.haml
@@ -1,2 +1,10 @@
-%h1=lc(:title)
-=dyta(:accounts)
+- form_remote_tag do  
+  %table{ :border => "rules" }
+    %tr
+      %td=lc :account_id
+      %td=lc :account_number
+      - @accounts.each do |account|
+        %tr
+          %td=account.id
+          %td=account.number
+          
