git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@193 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
   %body{:onload=>'resize();', :onresize=>'resize();'}
     = top_tag
     #columns{:orient=>:horizontal}
-      = location_tag(:side, :orient=> :vertical)
+      =# location_tag(:side, :orient=> :vertical)
       #main{:flex=>3}
         = help_tag
         = flash_tag :error
