--- a/app/views/accountancy/print_balance.html.haml
+++ b/app/views/accountancy/print_balance.html.haml
@@ -2,6 +2,45 @@
 - form_tag() do
   %table
     %tr
+      %td.label 
+        %h3 Recherche par année
+    %tr
       %td.label Entrez l'année recherchée 
     %tr
       %td.input=text_field :test, :date 
+      %td.button=submit_tag 'ok'
+      %br
+    %tr 
+    %tr
+    %tr
+      %td.label OU
+    %tr
+    %tr
+    %tr
+    %tr
+      %td.label
+        %h3 Recherche de date à date
+    %tr
+    %tr
+      %td.label Début
+      %td.label=date_select :test, :begin
+    %tr
+      %td.label  Fin 
+      %td.label=date_select :test, :end
+    %tr
+    %tr
+    %tr
+      %td.label OU
+    %tr
+    %tr
+    %tr
+      %td.label
+        %h3  Recherche de compte à compte
+    %tr
+      %td.input=text_field :test, :account1
+      %td.label Compte 1
+    %tr
+      %td.input=text_field :test, :account2
+      %td.label Compte 2 
+      %td.button=submit_tag 'ok'
+   
