--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -12,8 +12,7 @@
         %td.label=lc :password
         %td.input=password_field :user, :password, :tabindex=>2, :onchange=>"document."+@login+".submit()"
         %td.help= link_to lc(:lost_password), :action=>:lost_password
-      %tr
-        %td.button{:colspan=>3}=submit_tag(lc(:connect), :tabindex=>3)
+      %tr        %td.button{:colspan=>3}=submit_tag(lc(:connect), :tabindex=>3)
       %tr
         %td.actions{:colspan=>3}=link_to lc(:register), {:action=>:register}, {:class=>:show}
   .line
