git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@207 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -8,7 +8,7 @@
         %td.label=lc :number_records
         %td.input=text_field_tag "number", session[:records_number], :tabindex => 1 
         %td.button=submit_tag 'ok', :html => {:tabindex => 2}     
-- form_remote_tag(:record) do 
+- form_remote_tag() do 
   %table
     %tr
       %td.label=lc :record_number
@@ -42,5 +42,5 @@
   - page['record_created_on'].value = @record.created_on
   - page['record_printed_on'].value = @record.printed_on
   - page['number'].value = session[:records_number]
-#flash_notice
+#div_id
     
