git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@212 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_entries.html.haml
+++ b/app/views/accountancy/_entries.html.haml
@@ -10,7 +10,7 @@
       %td.label=lc :record_credit
     - @records.each do |record|
       - attr = cycle("even","odd")  
-      - record.entries.reverse.each do |entry|
+      - record.entries.each do |entry|
         - debit = number_to_currency(entry.debit, :delimiter=>"", :precision => 2, :unit=>"")
         - credit = number_to_currency(entry.credit, :delimiter=>"", :precision => 2, :unit=>"")
         %tr{ :class=>(entry.record.balanced ? "balanced" : "unbalanced")+"-"+attr}
