--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -42,5 +42,5 @@
   - page['record_created_on'].value = @record.created_on
   - page['record_printed_on'].value = @record.printed_on
   - page['number'].value = session[:records_number]
-#div_id
+#err
     
