--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,17 +6,16 @@
     = title_tag
     = stylesheet_link_tag :defaults
     = javascript_include_tag :defaults
-  %body{:onload=>'resize();', :onresize=>'resize();'}
+  %body{:id=>:body, :orient=>:vertical, :onload=>'resize();', :onresize=>'resize();'}
     = top_tag
-    #columns{:orient=>:horizontal}
+    #columns{:orient=>:horizontal, :flex=>1}
       =# location_tag(:side, :orient=> :vertical)
-      #main{:flex=>3}
+      #main{:flex=>3, :orient=>:vertical}
         = help_tag
         = flash_tag :error
         = flash_tag :warning
         = flash_tag :notice
-        #yield
-          = yield
-      #help{:flex=>1, :style=>(session[:help] ? "" : "display:none")}
+        #yield=yield
+      #help{:flex=>1, :style=>''+(session[:help] ? "" : "display:none")}
         = render :partial=>'help/search' if session[:help]
  
