--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -22,19 +22,26 @@ tr.unbalanced-even td{background: #FFCCCC;}
 tr.unbalanced-odd td{background: #FF9999;}
 
 #lines { height: 300px; overflow: auto; }
-#top { border-bottom: 1px  solid  #C9D7F1; }
+#top { border-bottom: 1px  solid  #C9D7F1; height: 21px; }
 #guide { float:left; }
-#user { float:right; }
+#user .menu { float:right; }
 #columns { background: url(/images/template/columns.png) repeat-x top; }
 #side { width: 150px; border-right: 1px dotted #C9D7F1;}
 #main { overflow: auto; }
 #yield { padding: 4px; }
 #yield > h1 { font-variant: small-caps; letter-spacing:4px; }
-#help { width: 150px; /*border-left: 1px dotted #C9D7F1;*/ background: #fffee3 url(/images/template/help.png) repeat-x top;}
-#help > h2 { background: #C9D7F1; font-size: 20px; text-align:center; height:24px; padding:4px; vertical-align: center; }
+#help { width: 150px; border-left: 1px dotted #dd8; background: #fffee3 url(/images/template/help.png) repeat-x top;}
+/*#help > h2 { background: #C9D7F1; font-size: 20px; text-align:center; height:24px; padding:4px; vertical-align: center; }*/
 #help .nav { height: 32px; }
-#help .light { color: #dd8; text-transform: uppercase; font-weight:bold; overflow:hidden; padding: 6px 4px;}
-#help .content { padding: 8px; overflow: auto; }
+#help .light { color: #fff; font-size: 20px;  height: 24px; padding:4px; overflow:hidden; text-align: center; background: #C9D7F1 url(/images/template/help-end.png) no-repeat top right;}
+#help .content { text-align: justify;}
+#help .content .data { padding: 8px;}
+#help .content .data .data { padding: 0px; }
+#help .content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750;}
+#help .content h2 { font-size: 15px; margin: 8px 8px 4px;  border-bottom: 1px solid #dd8;}
+#help .content h3 { font-size: 13px; margin: 4px 16px 2px; color: #430; }
+#help .content .text-end { height: 1px; }
+#help .content .help-error { color:white; text-align: center; padding: 8px; font-weight:bold; background:#f00 url(/images/template/help-error.png) bottom repeat-x;}
 
 .help-link { float:right; }
 .help-link > a > div { width: 32px; height:32px; }
@@ -46,35 +53,18 @@ tr.unbalanced-odd td{background: #FF9999;}
 /*.help-t { float:right; margin:20px;}*/
 
 .menu {/* float:left; margin-top:20px; font-size:.8em;*/}
-
-.menu > a {display:block; text-decoration:none; background:#DDD;  padding:0 8px;}
-
-.menu > ul { margin:0 0 0 10px; position:relative; z-index:30000;}
-
-.menu > ul > li > a {text-decoration:underline; color:#00C;}
-
-.menu > ul > li > ul > li > a {width:100%;  text-decoration:none; color:#00C; display:block; padding:0 0 0 3px;}
-
-.menu > ul > li > ul > li:hover { background-color:#C9D7F1;}
-
-.menu > li {position:relative; list-style-type:none; float:left;}  
-
-.menu > ul > li > ul {position:absolute; background:white; z-index:20000;}
-
-.menu a:hover {text-decoration:none;}
-
-.menu > ul > li > ul {display:none;}
-
+.menu > a { display:block; text-decoration:none; background:#DDD;  padding:0 8px;}
+.menu a:hover { text-decoration:none;}
+/*.menu > li { position:relative; list-style-type:none; float:left;}  */
+.menu > ul { margin:0 0 0 4px; }
+.menu > ul > li { float:left; list-style-type:none; padding:1px 7px 2px; text-decoration:none; background:white; position:relative; border: 1px solid transparent;}
+.menu > ul > li > a { text-decoration:underline; color:#00C;}
+.menu > ul > li > ul > li {width:100%; padding:4px 4px 4px 4px; float:left; text-decoration:none; position:relative; list-style-type:none; } 
+.menu > ul > li > ul > li:hover { background-color:#C9D7F1; }
+.menu > ul > li > ul > li > a { width:100%; color:#00C; display:block; padding:0 0 0 3px; text-decoration:none;}
+.menu > ul > li > ul { position:absolute; z-index:4000; background:white; display:none; margin:4px; margin-left:-8px; width:8em; border:1px solid #C9D7F1 ; border-top:none; padding:0 8px 0 0;}
 .menu > ul > li:hover > ul, .menu > ul > li > ul:hover {display:block;}
-
-
-.menu > ul > li:hover { background:#E4EBF8; position:relative; z-index:32000;}
-      
-.menu > ul > li { float:left; list-style-type:none; padding:2px 8px 3px; text-decoration:none; background:white; position:relative;}
-
-.menu > ul > li > ul { margin:3px; margin-left:-8px; width:10em; position:absolute; list-style-type:none; border:1px solid #C9D7F1 ; border-top:none;  padding:0 8px 0 0;}
-
-.menu > ul > li > ul > li {width:100%; padding:4px 4px 4px 4px; float:left; text-decoration:none; position:relative; } 
+.menu > ul > li:hover { background:white; border: 1px solid #C9D7F1; border-bottom:none; height:40px;}
 
 .clearfix:after { content: "."; display:block; height:0; clear: both; visibility: hidden; }
 /* backslash hack hides from IE mac \*/
