--- a/app/views/guide/accountancy.html.erb
+++ b/app/views/guide/accountancy.html.erb
@@ -3,3 +3,4 @@
 <%=guide_link :accountancy, :accounts -%>
 <%=guide_link :accountancy, :entries -%>
 <%=guide_link :accountancy, :journals -%>
+<%=guide_link :accountancy, :bank_accounts -%>
