git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@226 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/departments.html.haml
+++ b/app/views/company/departments.html.haml
@@ -1,6 +1,6 @@
-%br
 #userslist
   =lc(:departments_listing)
-%br
+#getback
+  =link_to lc(:getback) , {:action=>:index}
 #dyta
   =dyta :departments
