--- a/app/views/company/establishments.html.haml
+++ b/app/views/company/establishments.html.haml
@@ -1,6 +1,6 @@
-%br
 #userslist
   =lc(:establishments_listing)
-%br
+#getback
+  =link_to lc(:getback) , {:action=>:index}
 #dyta
   =dyta :establishments
